--- a/two_body/README
+++ b/two_body/README
@@ -313,9 +313,37 @@ along the point-like body's orbit. In other words, the changing mass introduces 
 dependence of distance into the expression for the gravitational force that
 breaks the 1/d^2 dependence. Thus, by virtue of Bertrand's theorem
 (https://en.wikipedia.org/wiki/Bertrand%27s_theorem), extended central bodies
-never lead to closed orbits, not even in the case that the initial conditions
-imply e < 1. The orbital parameters set by the initial conditions correspond,
+do not lead to closed orbits, not even in the case that the initial conditions
+imply e < 1, unless e = 0 (i.e. circular orbits). With the notable exception of
+the case e=0, the orbital parameters set by the initial conditions correspond,
 at best, to *osculating* parameters in this case. The same is true for non-spherically
 symmetric potentials.
 
+4) Dynamical friction (deceleration). It is calculated adopting a number of simplifying
+assumptions:
+	1 - The object exerting dynamical friction is approximated by a matter density field
+	with particles of mass m
+	2 - The particle's velocity distribution is Maxwellian
+	3 - The mass of the object experiencing dynamical friction is M >> m
+	4 - The Couloumb logarithm is calculated using the parametrization by
+	Hashimoto et al. (2003, their equation 5)
 
+Notes:
+	- Dynamical friction is a *dissipative* force! Energy and angular momentum are
+	not longer conserved when DF is switched on
+	- Point-like masses cannot exert dynamical friction, by definition
+	- Not two bodies can exert dynamical friction on one another; the less extended
+	always experiences DF from the more extended one
+	- It might be worth exploring the effect or relaxing assumption 2 and use
+	instead the true velocity distribution for a given density field (i.e. profile).
+		- Hashimoto et al. (2003) approximate the density field by a King profile;
+		its velocity distribution is a truncated Maxwellian, thus very close to the
+		assumption. However, most of the following work (see references below) used
+		different profiles (e.g. NFW, Hernquist) but still assumed a Maxwellian
+		velocity distribution.
+	- It may be worth exploring other parameterizations of the Couloumb logarithm;
+	  	- See https://galpy.readthedocs.io/en/v1.4.1/reference/potentialchandrasekhardynfric.html
+	- Different sources in the literature use different values of M:
+		- Besla et al. (2007, their equation 5) use the *total* mass; this is the most
+		common approach (see also Semczuk et al. 2018, their equation B3)(
+		- Dierickx & Loeb (2017a) use the mass within the object's tidal radius
